fix: overflowing text

--- a/frontend/src/styles/upload_page.scss
+++ b/frontend/src/styles/upload_page.scss
@@ -39,6 +39,7 @@
                 margin-top: 0.25rem;
                 overflow: auto;
                 margin-bottom: 0.45rem;
+                width: fit-content;
             }
         }
 
